--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </table>
     <a href="products.html">View Products</a>
     <script type="text/javascript">
-      fetch("http://localhost:6969/users", {
+      fetch("http://localhost:6969/products", {
       })
         .then((res) => res.json())
         .then((data) => {
